--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ gradio = "^5.41.1"
 pandas = "^2.3.1"
 scipy = "^1.16.1"
 scikit-image = "^0.25.2"
+fastapi = "^0.116.1"
+uvicorn = {extras = ["standard"], version = "^0.35.0"}
 
 
 
