--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,8 +9,8 @@ readme = "README.md"
 python = ">=3.11,<3.14"
 torch = {version = "^2.8.0+cu129", source = "torch_cu129"}
 torchvision = {version = "^0.23.0+cu129", source = "torch_cu129"}
-cellpose = ">=4"
-gradio = "^5.41.1"
+cellpose = "^4.0.6"
+gradio = "^5.43.1"
 pandas = "^2.3.1"
 scipy = "^1.16.1"
 scikit-image = "^0.25.2"
