--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ scipy = "^1.16.1"
 scikit-image = "^0.25.2"
 fastapi = "^0.116.1"
 uvicorn = {extras = ["standard"], version = "^0.35.0"}
+matplotlib = "^3.9.2"
 
 
 
