Refactor project structure and add new features
- Renamed package from "cellpose-sam-gradio" to "dualcellquant" and updated version to 1.0.0 in pyproject.toml.
- Added Create_mask_from_2images.py for processing and masking images from two sources.
- Introduced cellpose_app.py to create a Gradio interface for Cellpose-SAM segmentation.
- Created test_refactor.py to validate imports and functionality of the dualcellquant package.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
-name = "cellpose-sam-gradio"
-version = "0.1.0"
+name = "dualcellquant"
+version = "1.0.0"
 description = ""
 authors = ["fuji3to4 <sfujii@bio.kyutech.ac.jp>"]
 readme = "README.md"
