--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,8 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = ">=3.11,<3.14"
-torch = {version = "^2.8.0+cu129", source = "torch_cu129"}
-torchvision = {version = "^0.23.0+cu129", source = "torch_cu129"}
+torch = ">=2.8,<3.0"
+torchvision = ">=0.23,<1.0"
 cellpose = "^4.0.6"
 gradio = "5.43.1"
 pandas = "^2.3.1"
@@ -18,6 +18,7 @@ fastapi = "^0.116.1"
 uvicorn = {extras = ["standard"], version = "^0.35.0"}
 matplotlib = "^3.9.2"
 jupyter = "^1.1.1"
+tabulate = "^0.9.0"
 
 
 
